<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="#2C3E50"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/aclonica"
                android:text="Clubs"
                android:textAlignment="center"
                android:textColor="#FDC689"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:contextClickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:elevation="30dp"
                    android:src="@drawable/gdsclogo">

                </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/gdsc_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:text="@string/gdsc"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:contextClickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">

            <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/ossaitlogo">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/oss_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:text="@string/oss"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:contextClickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/tblago">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tb_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="95dp"
                android:paddingTop="25dp"
                android:text="@string/techb"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/sportsclub">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/sports_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingTop="25dp"
                android:text="@string/sport"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/ecelllogo">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/ecell_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="70dp"
                android:paddingTop="25dp"
                android:text="@string/ecell"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/cblogo">

            </ImageView>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/cb_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="95dp"
                android:paddingTop="25dp"
                android:text="@string/cultural"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/cpclub">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cp_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingTop="25dp"
                android:text="@string/cp"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/isdfclub">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/isdf_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingTop="25dp"
                android:text="@string/isdf"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/radio">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/radio_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="95dp"
                android:paddingTop="25dp"
                android:text="@string/radio"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">



            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/gdxr">

            </ImageView>

            <TextView
                android:id="@+id/gdxr_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingTop="25dp"
                android:text="@string/gdxr"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="30dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:elevation="30dp"
                android:src="@drawable/finearts">

            </ImageView>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/finearts_ait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="95dp"
                android:paddingTop="25dp"
                android:text="@string/finearts"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/start"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:text="More coming soon !!!"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>